# livesh

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cmux-livesh.md
crates/livesh-cli/: Cargo.toml
crates/livesh-cli/src/: args.rs  bridge.rs  client.rs  daemon.rs  daemon_spawn.rs  framing.rs  lib.rs  pty_master.rs  raw_mode.rs  state_json.rs  takeover.rs  tty.rs
crates/livesh-core/: Cargo.toml
crates/livesh-core/src/: config.rs  gc.rs  lib.rs  limits.rs  metadata.rs  paths.rs  shell_cwd.rs  shell_resolve.rs  terminal_model.rs
crates/livesh-protocol/: Cargo.toml
crates/livesh-protocol/src/: lib.rs
src/: bridge.rs  daemon.rs  lib.rs  metadata.rs  proctitle.rs  terminal_model.rs
