[workspace]
members = [
    "crates/livesh-protocol",
    "crates/livesh-core",
    "crates/livesh-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
bincode = "1"
nix = { version = "0.29", features = ["fs", "process", "signal", "term", "user"] }
parking_lot = "0.12"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
