[package]
name = "livesh"
description = "A persistent live shell: run your shell in a daemon-owned PTY, detach and reattach by id. Provides the livesh, liveshd, and liveshctl binaries."
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Johnny Wang"]
repository = "https://github.com/xiaocang/livesh"
homepage = "https://github.com/xiaocang/livesh"
readme = "README.md"
rust-version = "1.85"
keywords = ["shell", "pty", "terminal", "session", "daemon"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["cmux-livesh.md", "plan.md", "*.profraw"]

[[bin]]
name = "livesh"
path = "src/bin/livesh.rs"

[[bin]]
name = "liveshd"
path = "src/bin/liveshd.rs"

[[bin]]
name = "liveshctl"
path = "src/bin/liveshctl.rs"

[dependencies]
anyhow = "1"
bincode = "1"
nix = { version = "0.29", features = ["fs", "process", "signal", "term", "user"] }
parking_lot = "0.12"
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }
vt100 = "0.16"
