[package]
name = "livesh-cli"
description = "A persistent live shell: run your shell in a daemon-owned PTY, detach and reattach by id. Provides the livesh, liveshd, and liveshctl binaries."
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "livesh"
path = "src/bin/livesh.rs"

[[bin]]
name = "liveshd"
path = "src/bin/liveshd.rs"

[[bin]]
name = "liveshctl"
path = "src/bin/liveshctl.rs"

[dependencies]
anyhow.workspace = true
livesh-core = { path = "../livesh-core", version = "0.1.0" }
livesh-protocol = { path = "../livesh-protocol", version = "0.1.0" }
nix.workspace = true
parking_lot.workspace = true
portable-pty.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
